// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`yukioshi CLI help-text snapshots every documented command emits stable help text: yukioshi acp --help 1`] = `
"yukioshi acp

start ACP (Agent Client Protocol) server

Options:
  -h, --help         show help                                                             [boolean]
  -v, --version      show version number                                                   [boolean]
      --print-logs   print logs to stderr                                                  [boolean]
      --log-level    log level                  [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure         run without external plugins                                          [boolean]
      --port         port to listen on                                         [number] [default: 0]
      --hostname     hostname to listen on                           [string] [default: "127.0.0.1"]
      --mdns         enable mDNS service discovery (defaults hostname to 0.0.0.0)
                                                                          [boolean] [default: false]
      --mdns-domain  custom domain name for mDNS service (default: yukioshi.local)
                                                                [string] [default: "yukioshi.local"]
      --cors         additional domains to allow for CORS                      [array] [default: []]
      --cwd          working directory [string] [default: "<HOME>"]"
`;

exports[`yukioshi CLI help-text snapshots every documented command emits stable help text: yukioshi mcp --help 1`] = `
"yukioshi mcp

manage MCP (Model Context Protocol) servers

Commands:
  yukioshi mcp add [name]     add an MCP server
  yukioshi mcp list           list MCP servers and their status                        [aliases: ls]
  yukioshi mcp auth [name]    authenticate with an OAuth-enabled MCP server
  yukioshi mcp logout [name]  remove OAuth credentials for an MCP server
  yukioshi mcp debug <name>   debug OAuth connection for an MCP server

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`yukioshi CLI help-text snapshots every documented command emits stable help text: yukioshi attach --help 1`] = `
"yukioshi attach <url>

attach to a running yukioshi server

Positionals:
  url  http://localhost:4096                                                     [string] [required]

Options:
  -h, --help          show help                                                            [boolean]
  -v, --version       show version number                                                  [boolean]
      --print-logs    print logs to stderr                                                 [boolean]
      --log-level     log level                 [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure          run without external plugins                                         [boolean]
      --dir           directory to run in                                                   [string]
  -c, --continue      continue the last session                                            [boolean]
  -s, --session       session id to continue                                                [string]
      --fork          fork the session when continuing (use with --continue or --session)  [boolean]
  -p, --password      basic auth password (defaults to YUKIOSHI_SERVER_PASSWORD)            [string]
  -u, --username      basic auth username (defaults to YUKIOSHI_SERVER_USERNAME or 'yukioshi')
                                                                                            [string]
      --mini          start the minimal interactive interface             [boolean] [default: false]
      --no-replay     disable mini session history replay on resume and after resize       [boolean]
      --replay-limit  cap visible mini replay to the newest N messages                      [number]"
`;

exports[`yukioshi CLI help-text snapshots every documented command emits stable help text: yukioshi run --help 1`] = `
"yukioshi run [message..]

run yukioshi with a message

Positionals:
  message  message to send                                                     [array] [default: []]

Options:
  -h, --help           show help                                                           [boolean]
  -v, --version        show version number                                                 [boolean]
      --print-logs     print logs to stderr                                                [boolean]
      --log-level      log level                [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure           run without external plugins                                        [boolean]
      --command        the command to run, use message for args                             [string]
  -c, --continue       continue the last session                                           [boolean]
  -s, --session        session id to continue                                               [string]
      --fork           fork the session before continuing (requires --continue or --session)
                                                                                           [boolean]
      --share          share the session                                                   [boolean]
  -m, --model          model to use in the format of provider/model                         [string]
      --agent          mode or agent: build, plan, goal, reasoning, research, auto, or a custom
                       agent                                                                [string]
      --format         format: default (formatted) or json (raw JSON events)
                                          [string] [choices: "default", "json"] [default: "default"]
  -f, --file           file(s) to attach to message                                          [array]
      --title          title for the session (uses truncated prompt if no value provided)   [string]
      --attach         attach to a running yukioshi server (e.g., http://localhost:4096)    [string]
  -p, --password       basic auth password (defaults to YUKIOSHI_SERVER_PASSWORD)           [string]
  -u, --username       basic auth username (defaults to YUKIOSHI_SERVER_USERNAME or 'yukioshi')
                                                                                            [string]
      --dir            directory to run in, path on remote server if attaching              [string]
      --worktree       run in a git worktree of this project with this name (created if needed)
                                                                                            [string]
      --port           port for the local server (defaults to random port if no value provided)
                                                                                            [number]
      --variant        model variant (provider-specific reasoning effort, e.g., high, max, minimal)
                                                                                            [string]
      --thinking       show thinking blocks                                                [boolean]
  -i, --interactive    run in direct interactive split-footer mode        [boolean] [default: false]
      --verify         run full project verification on changed files (off by default)
                                                                          [boolean] [default: false]
      --skip-verify    skip verification checks after turn completion                      [boolean]
      --summary        print the files changed after the turn (--no-summary to turn off)
                                                                           [boolean] [default: true]
      --output-schema  JSON Schema (a file, or inline JSON) the final answer must match; the answer
                       is printed as JSON                                                   [string]
      --max-turns      stop after this many model turns (exit code 5)                       [number]
      --max-cost       stop once this run has cost this many dollars (exit code 6)          [number]
      --auto           auto-approve permissions that are not explicitly denied (dangerous!)
                                                                          [boolean] [default: false]
      --mode           permission mode for this session: manual asks for anything not explicitly
                       configured, auto auto-approves low-risk actions (reads/searches), auto-all
                       auto-approves anything not explicitly denied or hard-blocked, plan restricts
                       the agent to low-risk actions only, review has a small model approve or
                       refuse each action that is not low-risk
                                  [string] [choices: "manual", "auto", "auto-all", "plan", "review"]"
`;

exports[`yukioshi CLI help-text snapshots every documented command emits stable help text: yukioshi debug --help 1`] = `
"yukioshi debug

debugging and troubleshooting tools

Commands:
  yukioshi debug config        show resolved configuration
  yukioshi debug lsp           LSP debugging utilities
  yukioshi debug rg            ripgrep debugging utilities
  yukioshi debug file          file system debugging utilities
  yukioshi debug scrap         list all known projects
  yukioshi debug skill         list all available skills
  yukioshi debug snapshot      snapshot debugging utilities
  yukioshi debug startup       print startup timing
  yukioshi debug agent <name>  show agent configuration details
  yukioshi debug v2            debug v2 catalog and built-in plugins
  yukioshi debug info          show debug information
  yukioshi debug paths         show global paths (data, config, cache, state)
  yukioshi debug wait          wait indefinitely (for debugging)

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`yukioshi CLI help-text snapshots every documented command emits stable help text: yukioshi providers --help 1`] = `
"yukioshi providers

manage AI providers and credentials

Commands:
  yukioshi providers list               list providers and credentials                 [aliases: ls]
  yukioshi providers login [url]        log in to a provider
  yukioshi providers logout [provider]  log out from a configured provider

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`yukioshi CLI help-text snapshots every documented command emits stable help text: yukioshi agent --help 1`] = `
"yukioshi agent

manage agents

Commands:
  yukioshi agent create  create a new agent
  yukioshi agent list    list all available agents

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`yukioshi CLI help-text snapshots every documented command emits stable help text: yukioshi upgrade --help 1`] = `
"yukioshi upgrade [target]

upgrade yukioshi to the latest or a specific version

Positionals:
  target  version to upgrade to, for ex '0.1.48' or 'v0.1.48'                               [string]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
  -m, --method      installation method to use
                          [string] [choices: "curl", "npm", "pnpm", "bun", "brew", "choco", "scoop"]"
`;

exports[`yukioshi CLI help-text snapshots every documented command emits stable help text: yukioshi uninstall --help 1`] = `
"yukioshi uninstall

uninstall yukioshi and remove all related files

Options:
  -h, --help         show help                                                             [boolean]
  -v, --version      show version number                                                   [boolean]
      --print-logs   print logs to stderr                                                  [boolean]
      --log-level    log level                  [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure         run without external plugins                                          [boolean]
  -c, --keep-config  keep configuration files                             [boolean] [default: false]
  -d, --keep-data    keep session data and snapshots                      [boolean] [default: false]
      --dry-run      show what would be removed without removing          [boolean] [default: false]
  -f, --force        skip confirmation prompts                            [boolean] [default: false]"
`;

exports[`yukioshi CLI help-text snapshots every documented command emits stable help text: yukioshi serve --help 1`] = `
"yukioshi serve

starts a headless yukioshi server

Options:
  -h, --help         show help                                                             [boolean]
  -v, --version      show version number                                                   [boolean]
      --print-logs   print logs to stderr                                                  [boolean]
      --log-level    log level                  [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure         run without external plugins                                          [boolean]
      --port         port to listen on                                         [number] [default: 0]
      --hostname     hostname to listen on                           [string] [default: "127.0.0.1"]
      --mdns         enable mDNS service discovery (defaults hostname to 0.0.0.0)
                                                                          [boolean] [default: false]
      --mdns-domain  custom domain name for mDNS service (default: yukioshi.local)
                                                                [string] [default: "yukioshi.local"]
      --cors         additional domains to allow for CORS                      [array] [default: []]"
`;

exports[`yukioshi CLI help-text snapshots every documented command emits stable help text: yukioshi models --help 1`] = `
"yukioshi models [provider]

list all available models

Positionals:
  provider  provider ID to filter models by                                                 [string]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
      --verbose     use more verbose model output (includes metadata like costs)           [boolean]
      --refresh     refresh the models cache from models.dev                               [boolean]"
`;

exports[`yukioshi CLI help-text snapshots every documented command emits stable help text: yukioshi stats --help 1`] = `
"yukioshi stats

show token usage and cost statistics

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
      --days        show stats for the last N days (default: all time)                      [number]
      --tools       number of tools to show (default: all)                                  [number]
      --models      show model statistics (default: hidden). Pass a number to show top N, otherwise
                    shows all
      --project     filter by project (default: all projects, empty string: current project)[string]"
`;

exports[`yukioshi CLI help-text snapshots every documented command emits stable help text: yukioshi export --help 1`] = `
"yukioshi export [sessionID]

export session data as JSON

Positionals:
  sessionID  session id to export                                                           [string]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
      --sanitize    redact sensitive transcript and file data                              [boolean]"
`;

exports[`yukioshi CLI help-text snapshots every documented command emits stable help text: yukioshi import --help 1`] = `
"yukioshi import [file]

import a session: an exported JSON file, a share URL, or a Claude Code or Codex conversation
(.jsonl)

Positionals:
  file  exported JSON file, share URL, or Claude Code or Codex .jsonl transcript            [string]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
      --from        import the newest Claude Code or Codex conversation held in this folder
                                                               [string] [choices: "claude", "codex"]"
`;

exports[`yukioshi CLI help-text snapshots every documented command emits stable help text: yukioshi pr --help 1`] = `
"yukioshi pr <number>

fetch and checkout a GitHub PR branch, then run yukioshi

Positionals:
  number  PR number to checkout                                                  [number] [required]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`yukioshi CLI help-text snapshots every documented command emits stable help text: yukioshi session --help 1`] = `
"yukioshi session

manage sessions

Commands:
  yukioshi session list                list sessions
  yukioshi session delete <sessionID>  delete a session

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`yukioshi CLI help-text snapshots every documented command emits stable help text: yukioshi plugin --help 1`] = `
"yukioshi plugin <module>

install plugin and update config

Positionals:
  module  npm module name                                                        [string] [required]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
  -g, --global      install in global config                              [boolean] [default: false]
  -f, --force       replace existing plugin version                       [boolean] [default: false]"
`;

exports[`yukioshi CLI help-text snapshots every documented command emits stable help text: yukioshi db --help 1`] = `
"yukioshi db

database tools

Commands:
  yukioshi db [query]     open an interactive sqlite3 shell or run a query                 [default]
  yukioshi db path        print the database path

Positionals:
  query  SQL query to execute                                                               [string]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
      --format      Output format                 [string] [choices: "json", "tsv"] [default: "tsv"]"
`;

exports[`yukioshi CLI help-text snapshots every documented command emits stable help text: yukioshi mcp list --help 1`] = `
"yukioshi mcp list

list MCP servers and their status

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`yukioshi CLI help-text snapshots every documented command emits stable help text: yukioshi mcp add --help 1`] = `
"yukioshi mcp add [name]

add an MCP server

Positionals:
  name  name of the MCP server                                                              [string]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
      --url         URL for a remote MCP server                                             [string]
      --env         environment variable for a local MCP server (KEY=VALUE)                  [array]
      --header      HTTP header for a remote MCP server (KEY=VALUE)                          [array]"
`;

exports[`yukioshi CLI help-text snapshots every documented command emits stable help text: yukioshi mcp auth --help 1`] = `
"yukioshi mcp auth [name]

authenticate with an OAuth-enabled MCP server

Commands:
  yukioshi mcp auth list  list OAuth-capable MCP servers and their auth status         [aliases: ls]

Positionals:
  name  name of the MCP server                                                              [string]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`yukioshi CLI help-text snapshots every documented command emits stable help text: yukioshi mcp logout --help 1`] = `
"yukioshi mcp logout [name]

remove OAuth credentials for an MCP server

Positionals:
  name  name of the MCP server                                                              [string]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`yukioshi CLI help-text snapshots every documented command emits stable help text: yukioshi providers list --help 1`] = `
"yukioshi providers list

list providers and credentials

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`yukioshi CLI help-text snapshots every documented command emits stable help text: yukioshi providers login --help 1`] = `
"yukioshi providers login [url]

log in to a provider

Positionals:
  url  yukioshi auth provider                                                               [string]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
  -p, --provider    provider id or name to log in to (skips provider selection)             [string]
  -m, --method      login method label (skips method selection)                             [string]"
`;

exports[`yukioshi CLI help-text snapshots every documented command emits stable help text: yukioshi providers logout --help 1`] = `
"yukioshi providers logout [provider]

log out from a configured provider

Positionals:
  provider  provider id or name to log out from                                             [string]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`yukioshi CLI help-text snapshots every documented command emits stable help text: yukioshi agent create --help 1`] = `
"yukioshi agent create

create a new agent

Options:
  -h, --help                  show help                                                    [boolean]
  -v, --version               show version number                                          [boolean]
      --print-logs            print logs to stderr                                         [boolean]
      --log-level             log level         [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure                  run without external plugins                                 [boolean]
      --path                  directory path to generate the agent file                     [string]
      --description           what the agent should do                                      [string]
      --mode                  agent mode            [string] [choices: "all", "primary", "subagent"]
      --permissions, --tools  comma-separated list of permissions to allow (default: all).
                              Available: "bash, read, edit, glob, grep, webfetch, task, todowrite,
                              websearch, lsp, skill"                                        [string]
  -m, --model                 model to use in the format of provider/model                  [string]"
`;

exports[`yukioshi CLI help-text snapshots every documented command emits stable help text: yukioshi agent list --help 1`] = `
"yukioshi agent list

list all available agents

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`yukioshi CLI help-text snapshots every documented command emits stable help text: yukioshi session list --help 1`] = `
"yukioshi session list

list sessions

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
  -n, --max-count   limit to N most recent sessions                                         [number]
      --format      output format             [string] [choices: "table", "json"] [default: "table"]"
`;

exports[`yukioshi CLI help-text snapshots every documented command emits stable help text: yukioshi session delete --help 1`] = `
"yukioshi session delete <sessionID>

delete a session

Positionals:
  sessionID  session ID to delete                                                [string] [required]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`yukioshi CLI help-text snapshots every documented command emits stable help text: yukioshi db path --help 1`] = `
"yukioshi db path

print the database path

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;
